--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -26,9 +26,13 @@
                             {% for fotografia in cards %}
                             <li class="card">
                                 <a href="{% url 'imagem' fotografia.id %}">
-                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/'%}{{ fotografia.foto }}" alt="foto">
+                                {% if fotografia.foto == "" or fotografia.foto == null %}
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/placeholder.jpg'%}" alt="foto">
+                                {% else %}
+                                    <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
+                                {% endif %}
                                 </a>
-                                <span class="card__tag">Estrelas</span>
+                                <span class="card__tag">{{ fotografia.categoria }}</span>
                                 <div class="card__info">
                                     <p class="card__titulo">{{ fotografia.nome }}</p>
                                     <div class="card__texto">
